tests/lang/errors/catch_internal_match.neon
// There is exactly one `catch` clause — no multi-catch. Discriminating between
// error kinds is done with an ordinary `match` inside the catch body, over `e`,
// which the checker types as the callee's error union (`ReadError | DecodeError`
// here). No new syntax is involved: the catch body is just an expression.
//
// Because `e` is the declared union and nothing wider, the internal match is
// exhaustive over both arms without a `_`.

use std::io;
use std::string;

record ReadError { msg: str }
record DecodeError { msg: str }

impl Display for ReadError {
    fn to_string(error: ReadError) -> str { error.msg }
}
impl Error for ReadError { fn message(e: ReadError) -> str { e.msg } }

impl Display for DecodeError {
    fn to_string(error: DecodeError) -> str { error.msg }
}
impl Error for DecodeError { fn message(e: DecodeError) -> str { e.msg } }

fn load(which: i64) throws ReadError | DecodeError -> str {
    if which == 0 { throw ReadError { msg: "disk gone" } }
    else if which == 1 { throw DecodeError { msg: "bad byte" } }
    else { "loaded" }
}

fn attempt(which: i64) -> str {
    try load(which) catch (e) {
        match e {
            is ReadError => string::concat("io: ", e.msg),
            is DecodeError => string::concat("parse: ", e.msg),
        }
    }
}

fn main() {
    io::println(attempt(0));
    io::println(attempt(1));
    io::println(attempt(2));
}
